--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -26,9 +26,13 @@
     <script src='../static/d3.min.js'></script>
   </head>
   <body>
+    <h1>Premature Birth Rate 2014</h1>
+
     <div id="chart"></div>
     <div id="dataset-picker">
+      <p></p>
     </div>
+
     <script type="text/javascript">
       var margin = { top: 50, right: 20, bottom: 100, left: 70},
           width = 1250 - margin.left - margin.right,
@@ -78,7 +82,7 @@
         },
         function(error, data) {
           var colorScale = d3.scale.quantile()
-              .domain([0, buckets - 1, d3.max(data, function (d) { return d.value; })])
+              .domain([3, buckets - 1, d3.max(data, function (d) { return d.value; })])
               .range(colors);
 
           var cards = svg.selectAll(".hour")
@@ -87,6 +91,7 @@
           cards.append("title");
 
           cards.enter().append("rect")
+              .filter( function(d){ return d.value > 0; } )
               .attr("x", function(d) { return (d.hour ) * gridSize; })
               .attr("y", function(d) { return (d.day ) * gridSize; })
               .attr("rx", 4)
@@ -94,10 +99,10 @@
               .attr("class", "hour bordered")
               .attr("width", gridSize)
               .attr("height", gridSize)
-              .style("fill", colors[0]);
+              .style("fill", function(d) { if (+d.value > 2. ) {return colors[0];} else{return '#FFFFFF';} });
 
           cards.transition().duration(1000)
-              .style("fill", function(d) { return colorScale(d.value); });
+              .style("fill", function(d){ if( +d.value > .1){ return colorScale(d.value); } else {return '#FFFFFF';} } );
 
           cards.select("title").text(function(d) { return d.value; });
 
@@ -125,6 +130,12 @@
           legend.exit().remove();
 
         });
+
+        svg.append("text")
+            .attr("class", 'timeLabel mono axis' )
+            .text("Percentage of births that are premature.")
+            .attr("x", 60)
+            .attr("y", 140);
       };
 
       heatmapChart('/static/heat1.csv');
