back and forth buttons

--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -33,6 +33,13 @@
       <p></p>
     </div>
 
+      </div>
+    <form method='POST' action='index'>
+      <p>
+      <button  type='submit' value='goto'>See Graph</button >
+      </p>
+  <div>
+
     <script type="text/javascript">
       var margin = { top: 50, right: 20, bottom: 100, left: 70},
           width = 1250 - margin.left - margin.right,
