--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,13 @@
     </form>
 
   </div>
+    <form method='POST' action='heatmap'>
+      <p>
+      <button  type='submit' value='goto'>See heatmap</button >
+      </p>
+  <div>
 
+  </div>
 <script>
   var default_age = 9;
   var checked =[4]
