--- a/templates/poverty.html
+++ b/templates/poverty.html
@@ -28,7 +28,7 @@
 
   var state_codes = ['AL', 'AK', 'AZ', 'AR', 'CA', 'CO', 'CT', 'DE', 'DC', 'FL', 'GA', 'HI', 'ID', 'IL', 'IN', 'IA', 'KS', 'KY', 'LA', 'ME', 'MD', 'MA', 'MI', 'MN', 'MS', 'MO', 'MT', 'NE', 'NV', 'NH', 'NJ', 'NM', 'NY', 'NC', 'ND', 'OH', 'OK', 'OR', 'PA', 'RI', 'SC', 'SD', 'TN', 'TX', 'UT', 'VT', 'VA', 'WA', 'WV', 'WI', 'WY'];
 
-  var mar = { t: 20, r: 20, b: 40 , l: 40},
+  var mar = { t: 20, r: 40, b: 40 , l: 40},
 
             width  = 900,
             height = 600;
@@ -64,7 +64,7 @@
                          .append('circle')
                          .attr('cx', function(d){ return xscale( d.pov  ); })
                          .attr('cy', function(d){ return yscale( d.rate ); })
-                         .attr('r', 4)
+                         .attr('r',6)
                          .attr('fill', function(d){
                                          if (d.race == 0){return '#8A2BE2'}
                                     else if (d.race == 1){return '#E22E2B'}
@@ -79,16 +79,18 @@
                                                            .style("top", (d3.event.pageY - 28) + "px");} );
 
 
-
-                  var xaxis = d3.svg.axis().scale(yscale).orient("left").ticks(15);
-                  var yaxis = d3.svg.axis().scale(xscale).orient("bottom").ticks(10);
-
-
-                  /*d3.select('svg').append('g').call(yaxis);
-                  d3.select('svg').append('g').call(xaxis).attr('transform', 'translate(0,'+height-mar.t+)';
-                  */
-                    d3.selectAll('g')
+                  d3.selectAll('g')
                       .attr('transform','translate('+mar.l+','+mar.t+')');
+
+                  var xaxis = d3.svg.axis().scale(xscale).orient("bottom").ticks(15);
+                  var yaxis = d3.svg.axis().scale(yscale).orient("left").ticks(10);
+
+
+                  d3.select('svg').append('g').call(yaxis).attr('transform','translate('+mar.l+','+ mar.t +')');
+                  d3.select('svg').append('g').call(xaxis).attr('transform','translate('+mar.l+','+ (height-mar.b) +')');
+
+                    /*d3.selectAll('g')
+                      .attr('transform','translate('+mar.l+','+mar.t+')'); */
 
                     }
 
