created link to poverty

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,11 @@
       <p>
       <button  type='submit' value='goto'>See heatmap</button >
       </p>
+
+    <form method='POST' action='poverty'>
+      <p>
+      <button  type='submit' value='goto'>See poverty</button >
+      </p>
   <div>
 
   </div>
