fixed axis offset

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
 
     <form method='POST' action='poverty'>
       <p>
-      <button  type='submit' value='goto'>See poverty</button >
+      <button  type='submit' value='goto2'>See poverty</button >
       </p>
   <div>
 
