minor cosmetic, label positions

--- a/templates/poverty.html
+++ b/templates/poverty.html
@@ -91,16 +91,15 @@
 
 
                   canvas.append("text")
-                  .text("Percentage of children living below poverty line. (%)")
-                  .attr("x", 350)
-                  .attr("y", 600);
+                  .text("Percentage of children (under age 6) living below poverty line (%)")
+                  .attr("x", 320)
+                  .attr("y", 590);
 
                   canvas.append('text')
                   .text('Percentage of Births that are Premature (%)')
-                  .attr('transform', ['translate(50,400)', 'rotate(-90)']);
+                  .attr('transform', ['translate(70,400)', 'rotate(-90)']);
 
-                    /*d3.selectAll('g')
-                      .attr('transform','translate('+mar.l+','+mar.t+')'); */
+
 
                     }
 
