fixed button issue

--- a/templates/healthcare.html
+++ b/templates/healthcare.html
@@ -62,24 +62,17 @@
     </tbody></table>
 
 
+    <p>
+    Update Chart: <input   type='submit' name='submit' value='healthcare'></input>
+    </p>
 
-    <button  type='submit' value='submit'>Submit</button >
+    <input   type='submit' name='submit' value='poverty'>See poverty</input>
+    <input   type='submit' name='submit' value='heatmap'>See heatmap</input>
 
     </form>
 
   </div>
-    <form method='POST' action='heatmap'>
-      <p>
-      <button  type='submit' value='goto'>See heatmap</button >
-      </p>
 
-    <form method='POST' action='poverty'>
-      <p>
-      <button  type='submit' value='goto2'>See poverty</button >
-      </p>
-  <div>
-
-  </div>
 <script>
   var default_age = 9;
   var checked =[4]
