--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -36,7 +36,10 @@
       </div>
     <form method='POST' action='index'>
       <p>
-      <button  type='submit' value='goto'>See Graph</button >
+        See Preliminary healthcare anlaysis: <input   type='submit' name='submit' value='healthcare'></input>
+      </p>
+      <p>
+       See Preliminary poverty anlaysis: <input   type='submit' name='submit' value='poverty'></input>
       </p>
   <div>
 
