--- a/templates/poverty.html
+++ b/templates/poverty.html
@@ -23,6 +23,12 @@
 
  </div>
 
+    <form method='POST' action='index'>
+      <input   type='submit' name='submit' value='healthcare'>Submit</input>
+      <input   type='submit' name='submit' value='poverty'>See poverty</input>
+      <input   type='submit' name='submit' value='heatmap'>See heatmap</input>
+    </form>
+
 </body>
 <script>
 
