Filling out text

--- a/templates/healthcare.html
+++ b/templates/healthcare.html
@@ -66,9 +66,20 @@
     Update Chart: <input   type='submit' name='submit' value='healthcare'></input>
     </p>
 
-    <input   type='submit' name='submit' value='poverty'>See poverty</input>
-    <input   type='submit' name='submit' value='heatmap'>See heatmap</input>
 
+    <p>
+    This crude anlysis shows little obvious correlation; aggreagting by state/race average time to first checkup
+    is likley glossing over signifigant details about each birth, and state racial/averages are closley clustered. With
+    more time I would like bin this metric for all pregrencies. It is interesting to observe that Native Americans
+    living in rulal states like the Dakota's and Montania appear to see physicans later into their pregrancies than
+    national average.
+    </p>
+
+    <p>
+    See preliminary poverty analysis: <input   type='submit' name='submit' value='poverty'></input>
+    </p>
+    <p>Back to heatmaps: <input   type='submit' name='submit' value='heatmap'></input>
+    </p>
     </form>
 
   </div>
