--- a/templates/poverty.html
+++ b/templates/poverty.html
@@ -16,6 +16,15 @@
   </style>
 </head>
 <body>
+  <h1>Premature Birth Rate 2014</h1>
+
+  <p>Although race is tightly correlated with premature birth it is not causative and can not be
+    considered in isolation.
+
+  </p>
+  <p>
+    Mouse over the data points for details.
+  </p>
 
  <div >
 
@@ -24,9 +33,13 @@
  </div>
 
     <form method='POST' action='index'>
-      <input   type='submit' name='submit' value='healthcare'>Submit</input>
-      <input   type='submit' name='submit' value='poverty'>See poverty</input>
-      <input   type='submit' name='submit' value='heatmap'>See heatmap</input>
+      <p>
+        Back to healthcare: <input   type='submit' name='submit' value='healthcare'></input>
+      </p>
+      <p>
+        Back to heatmap: <input   type='submit' name='submit' value='heatmap'></input>
+      </p>
+
     </form>
 
 </body>
