--- a/templates/healthcare.html
+++ b/templates/healthcare.html
@@ -35,7 +35,7 @@
 
 <body>
   <h1>Premature Birth Rate 2014</h1>
-  <h3> Compairing <br> <ul id=name></ul> </h3>
+  <h3> Comparing  <br> <ul id=name></ul> </h3>
 
   <p>Here we are plotting the state average rate of premature birth (optionally broken down by race) as a function of the mean delay between estimated date of conception and first reported neonatal checkup for the ~3.9 million birth records analyzed for 2014. Sphere radii are proportional to the absolute number of reordered premature births in each state (thus roughly proportional to state population). Mean delay between conception neonatal checkup was meant to be a rough indicator of access to preventative health care, but this may not be a valid assumption.</p>
 
