--- a/templates/poverty.html
+++ b/templates/poverty.html
@@ -19,7 +19,9 @@
   <h1>Premature Birth Rate 2014</h1>
 
   <p>Although race is tightly correlated with premature birth it is not causative and can not be
-    considered in isolation.
+    considered in isolation. To begin exploring the capability of census data to inform this analysis
+    I collected staticistics on childhood poverty rates in each state broken down by race. The ressulting scatter
+    plot displays positive correlation across states and ethnicities.
 
   </p>
   <p>
@@ -46,6 +48,7 @@
 <script>
 
   var state_codes = ['AL', 'AK', 'AZ', 'AR', 'CA', 'CO', 'CT', 'DE', 'DC', 'FL', 'GA', 'HI', 'ID', 'IL', 'IN', 'IA', 'KS', 'KY', 'LA', 'ME', 'MD', 'MA', 'MI', 'MN', 'MS', 'MO', 'MT', 'NE', 'NV', 'NH', 'NJ', 'NM', 'NY', 'NC', 'ND', 'OH', 'OK', 'OR', 'PA', 'RI', 'SC', 'SD', 'TN', 'TX', 'UT', 'VT', 'VA', 'WA', 'WV', 'WI', 'WY'];
+  var rcnm = {0:'American Indian or Alaska Native',1:'Asian or Pacific Islander',2:'Black or African American',3:'White',4:'State Average'}
 
   var mar = { t: 20, r: 20, b: 80 , l: 100},
 
@@ -75,6 +78,40 @@
 
                       var div = d3.select("body").append("div").attr("class", "tooltip").style("opacity", 0);
 
+
+                   var key = canvas.append('g');
+
+                   key.append( 'rect' )
+                      .attr('x', xscale(2) )
+                      .attr('y', yscale(15) )
+                      .attr('width', xscale(18))
+                      .attr('height', yscale(12))
+                      .attr('fill','white')
+                      .style('stroke','black')
+                      .style('stroke-width',2);
+
+                   key.selectAll('circle')
+                      .data( d3.range(4) )
+                      .enter()
+                      .append('circle')
+                      .attr( 'cx', xscale(3) )
+                      .attr( 'cy', function(i,d){ return yscale(14.7) + i*30 } )
+                      .attr( 'r',6)
+                      .attr('fill', function(d){
+                                         if (d == 0){return '#8A2BE2'}
+                                    else if (d == 1){return '#E22E2B'}
+                                    else if (d == 2){return '#82E22B'}
+                                    else if (d == 3){return '#2BDEE2'} });
+
+                   key.selectAll('text')
+                      .data( d3.range(4) )
+                      .enter()
+                      .append('text')
+                      .text( function(i,d){ return rcnm[i];} )
+                      .attr( 'x', xscale(3) + 10 )
+                      .attr( 'y', function(i,d){ return yscale(14.63) + i*30 } );
+
+
                    canvas.attr('height', height).attr('width',width);
 
                    canvas.append('g').selectAll('circle')
@@ -89,7 +126,7 @@
                                     else if (d.race == 1){return '#E22E2B'}
                                     else if (d.race == 2){return '#82E22B'}
                                     else if (d.race == 3){return '#2BDEE2'} })
-                          .on('mouseover', function(d){ d3.select(this)
+                          .on('mouseover', function(d,i){ d3.select(this)
                                                         div.transition()
                                                            .duration(200)
                                                            .style("opacity", .9);
