--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -30,7 +30,7 @@
 
       <p>This heat map represents ~3.9 million birth records (~5Gb plain text) collected by the CDC in 2014.
       (See <a href='http://www.cdc.gov/nchs/data_access/vitalstatsonline.htm'>Vital Statistics Data</a> for details).
-      The dataset contains significant amounts of ethnographic and medical details on the births occurring in the US,
+      The dataset contains significant ethnographic and medical details on the births occurring in the US,
       including details on the estimated gestation period for each birth. Defining a premature birth as one occurring
       before 37 weeks gestation, I compiled rates of premature birth by the enthic origins of the mother and state of mothers residence.
       Blank tiles indicate there was insufficient data for the demographic.
