--- a/templates/poverty.html
+++ b/templates/poverty.html
@@ -20,9 +20,8 @@
 
   <p>Although race is tightly correlated with premature birth it is not causative and can not be
     considered in isolation. To begin exploring the capability of census data to inform this analysis
-    I collected staticistics on childhood poverty rates in each state broken down by race. The ressulting scatter
-    plot displays positive correlation across states and ethnicities.
-
+    I collected statistics on childhood poverty rates in each state broken down by race. The resulting scatter
+    plot displays positive correlation across states and ethnicities linking rates of childhood poverty to rates of premature birth.
   </p>
   <p>
     Mouse over the data points for details.
