adding num visits anlysis

--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -59,6 +59,9 @@
         See preliminary health care analysis: <input   type='submit' name='submit' value='healthcare'></input>
       </p>
       <p>
+        See prenatal checkups: <input   type='submit' name='submit' value='visits'></input>
+      </p>
+      <p>
        See Preliminary poverty analysis: <input   type='submit' name='submit' value='poverty'></input>
       </p>
   <div>
