--- a/templates/poverty.html
+++ b/templates/poverty.html
@@ -38,6 +38,9 @@
         Back to healthcare: <input   type='submit' name='submit' value='healthcare'></input>
       </p>
       <p>
+        Back to prenatal checkups: <input   type='submit' name='submit' value='visits'></input>
+      </p>
+      <p>
         Back to heatmap: <input   type='submit' name='submit' value='heatmap'></input>
       </p>
 
