--- a/templates/healthcare.html
+++ b/templates/healthcare.html
@@ -74,7 +74,9 @@
     living in rulal states like the Dakota's and Montania appear to see physicans later into their pregrancies than
     national average.
     </p>
-
+    <p>
+        See prenatal checkups: <input   type='submit' name='submit' value='visits'></input>
+    </p>
     <p>
     See preliminary poverty analysis: <input   type='submit' name='submit' value='poverty'></input>
     </p>
