--- a/templates/num_visits.html
+++ b/templates/num_visits.html
@@ -44,7 +44,7 @@ body {
 
 var race = ['White',	'Black',	'American Indian',	'Asian']
 
-var margin = {top: 20, right: 80, bottom: 30, left: 50},
+var margin = {top: 20, right: 80, bottom: 70, left: 50},
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
@@ -97,7 +97,7 @@ d3.csv("../static/number_visits.csv", function(error, data) {
   x.domain(d3.extent(data, function(d) { return d.date; }));
 
   y.domain([
-    d3.min(cities, function(c) { return d3.min(c.values, function(v) { return v.temperature; }); }),
+    4,
     d3.max(cities, function(c) { return d3.max(c.values, function(v) { return v.temperature; }); })
   ]);
 
@@ -112,10 +112,16 @@ d3.csv("../static/number_visits.csv", function(error, data) {
 
   svg.append('text')
      .text('Premature Birth Rate (%)')
-     .attr('transform', 'rotate(-90)')
+     .attr('transform', ['rotate(-90)', 'translate(-220,-280)'])
      .attr('x',x(-1))
-     .attr('y',y(15))
+     .attr('y',y(15));
+
+    svg.append('text')
+     .text('Number of Prenatal Checkups')
+     .attr('x',x(9))
+     .attr('y',y(2))
      ;
+
 
 
   var city = svg.selectAll(".city")
@@ -128,12 +134,12 @@ d3.csv("../static/number_visits.csv", function(error, data) {
       .attr("d", function(d) { return line(d.values); })
       .style("stroke", function(d) { return color(d.name); });
 
-  city.append("text")
+    city.append("text")
       .datum(function(d) { return {name: d.name, value: d.values[d.values.length - 1]}; })
       .attr("transform", function(d) { return "translate(" + x(d.value.date) + "," + y(d.value.temperature) + ")"; })
       .attr("x", 3)
       .attr("dy", ".35em")
-      .text(function(i,d) { return race[i]; });
+      .text(function(d) { return d.name; });
 });
 
 </script>
