--- a/templates/num_visits.html
+++ b/templates/num_visits.html
@@ -28,7 +28,9 @@ body {
 
 </style>
 <body>
-
+  <h1>Premature Birth Rate 2014</h1>
+  <p>Across all ethnicities and geographic locations the number of premature births dropped as women received more prenatal checkups.
+  </p>
   <div id='plot'>
 
   </div>
