--- a/templates/num_visits.html
+++ b/templates/num_visits.html
@@ -26,7 +26,8 @@
 </style>
 <body>
   <h1>Premature Birth Rate 2014</h1>
-  <p>Across all ethnicities and geographic locations the number of premature births dropped as women received more prenatal checkups.
+  <p>Across all ethnicities and geographic locations the incidence of premature birth dropped
+     with an increase in the number of prenatal checkups visits.
   </p>
   <div id='plot'>
 
