--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -53,11 +53,11 @@ td {
     </p>
 
     <p>
-As a zeroth order approach to understanding premature births in the United States a Random Forrest Model using 100 estimators was learned on 75% of the birth records for 2015, and tested on the remaining 25% of the data. A subset of the available data I guessed would be useful for predicting premature birth was used in the model optimization.
+As a zeroth order approach to understanding premature births in the United States a Random Forest Model using 100 estimators was learned on 75% of the birth records for 2015, and tested on the remaining 25% of the data. A subset of the available data I guessed would be useful for predicting premature birth was used in the model optimization.
 Premature births were defined as those with less than 37 weeks reported gestational periods.
     </p>
 
-      <h3>Random Forrest Model Paramaters</h3>
+      <h3>Random Forest Model Parameters</h3>
   <div>
 
 
@@ -98,8 +98,9 @@ Premature births were defined as those with less than 37 weeks reported gestatio
 
     <p>
       This is perhaps not surprising, pregnancies are enormously complicated biological processes and a large fraction of premature
-      births occure in women with no known risk factors. While premature birth cannot be reliably predicted on an indivigual level
+      births occur in women with no known risk factors. While premature birth cannot be reliably predicted on an individual level
       population risks can be described.
+
   </p>
 
       <p> I first compiled rates of premature birth by the ethnic origins of the mother and state of mothers residence.
