changed root index to /

--- a/templates/healthcare.html
+++ b/templates/healthcare.html
@@ -48,7 +48,7 @@
 
   <div>
 
-    <form method='POST' action='index'>
+    <form method='POST' action='/'>
       <table>
       <tbody>
        <tr>
