--- a/templates/num_visits.html
+++ b/templates/num_visits.html
@@ -33,7 +33,7 @@
 
   </div>
 
-  <form method='POST' action='index'>
+  <form method='POST' action='/'>
     <p>See preliminary poverty analysis: <input   type='submit' name='submit' value='poverty'></input></p>
     <p>Back to healthcare: <input   type='submit' name='submit' value='healthcare'></input></p>
     <p>Back to heatmaps: <input   type='submit' name='submit' value='heatmap'></input></p>
