--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -122,7 +122,7 @@ Premature births were defined as those with less than 37 weeks reported gestatio
     </div>
 
       </div>
-    <form method='POST' action='index'>
+    <form method='POST' action='/'>
       <p>
         See preliminary health care analysis: <input   type='submit' name='submit' value='healthcare'></input>
       </p>
