--- a/templates/poverty.html
+++ b/templates/poverty.html
@@ -33,7 +33,7 @@
 
  </div>
 
-    <form method='POST' action='index'>
+    <form method='POST' action='/'>
       <p>
         Back to healthcare: <input   type='submit' name='submit' value='healthcare'></input>
       </p>
